--- a/WebProject/Views/Shared/CoffeShopPages/_LayoutCoffeShop.cshtml
+++ b/WebProject/Views/Shared/CoffeShopPages/_LayoutCoffeShop.cshtml
@@ -28,7 +28,11 @@
         <div class="header-icon">
             <i class="bx bxs-cart" id="cart-icons"></i>
             <i class="bx bx-search" id="search-icon"></i>
-            <i class="bx bx-user" id="user-icon"></i>
+            <a href="/AdminPage/Index">
+                <i class="bx bx-user" id="user-icon">
+                    
+                </i>
+            </a>
         </div>
         <!-- Search -->
         <div class="search-box">
