--- a/WebProject/Views/AdminPage/AddPageCoffee.cshtml
+++ b/WebProject/Views/AdminPage/AddPageCoffee.cshtml
@@ -12,7 +12,7 @@
             <input type="text" name="img" placeholder="Add Url Image coffee"/>
         </div>
         <div>
-            <input type="number" name="cell" placeholder="Add Price"/>
+            <input type="text" name="cell" placeholder="Add Price"/>
         </div>
         <button class="btn">Add New Coffee</button>  
     </form>
