--- a/WebProject/Views/AdminPage/Index.cshtml
+++ b/WebProject/Views/AdminPage/Index.cshtml
@@ -7,4 +7,7 @@
     <a href="/AdminPage/AddPageCoffee">
         Add Coffee
     </a>
-</din>
+    <a href="/AdminPage/AddingCoffee">
+        Adding Yor'e Coffee
+    </a>
+</div>
